kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1  
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: webserver
        image: slvalt/nginx-custom:v1
        volumeMounts:
        - name: workdir
          mountPath: /homework
        livenessProbe:
          httpGet:
            path: /
            port: 8000
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm /homework/index.html" ]
      volumes:
      - name: workdir
        emptyDir: {}
      nodeSelector:
        homework: "true"
